<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_audio_record_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AudioRecordingActivity"
    android:clickable="true">

    <!--ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" /-->

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordAudioButtonStart"
        android:id="@+id/startRecordingBtn"
        android:background="#ff82beff"
        android:layout_above="@+id/playRecordingSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:textOff="@string/recordAudioButtonStart"
        android:textOn="@string/recordAudioButtonStop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playRecordingSeekBar"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/startRecordingBtn"
        android:layout_alignStart="@+id/startRecordingBtn"
        android:layout_alignRight="@+id/startRecordingBtn"
        android:layout_alignEnd="@+id/startRecordingBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:id="@+id/playButton"
        android:layout_below="@+id/playRecordingSeekBar"
        android:layout_alignLeft="@+id/uploadAudioButton"
        android:layout_alignStart="@+id/uploadAudioButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopButton"
        android:id="@+id/stopButton"
        android:layout_alignTop="@+id/playButton"
        android:layout_alignRight="@+id/uploadAudioButton"
        android:layout_alignEnd="@+id/uploadAudioButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadAudioButton"
        android:id="@+id/uploadAudioButton"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

</RelativeLayout>