<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loggedin_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <!--ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" /-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendText"
        android:id="@+id/textButton"
        android:layout_above="@+id/audioButton"
        android:layout_alignLeft="@+id/audioButton"
        android:layout_alignStart="@+id/audioButton"
        android:layout_marginBottom="29dp"
        android:layout_alignRight="@+id/videoButton"
        android:layout_alignEnd="@+id/videoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendAudio"
        android:id="@+id/audioButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/photoButton"
        android:layout_alignEnd="@+id/photoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPhoto"
        android:id="@+id/photoButton"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/audioButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendVideo"
        android:id="@+id/videoButton"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/photoButton"
        android:layout_alignLeft="@+id/photoButton"
        android:layout_alignStart="@+id/photoButton" />

</RelativeLayout>