<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stageNumberTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/stageNumberTitle"
        android:textSize="30dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/clueText"
        android:layout_below="@+id/stageNumberTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/sendPositionBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPositionBtn"
        android:id="@+id/sendPositionBtn"
        android:onClick="sendPosition"
        android:layout_above="@+id/skipClueBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skipClueBtn"
        android:id="@+id/skipClueBtn"
        android:onClick="skipClue"
        android:layout_above="@+id/sendAnswerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff82beff"
        android:text="@string/sendMultimediaBtn"
        android:id="@+id/sendAnswerBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="sendMultimedia" />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Check Position"-->
        <!--android:id="@+id/button"-->
        <!--android:layout_alignBottom="@+id/clueText"-->
        <!--android:layout_toLeftOf="@+id/skipClueBtn"-->
        <!--android:layout_toStartOf="@+id/skipClueBtn"-->
        <!--android:onClick="checkPosition"/>-->

</RelativeLayout>