<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_video_record_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PhotoSendingActivity"
    android:clickable="true"
    tools:backgroundTint="@color/wallet_dim_foreground_holo_dark">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadPhotoButton"
        android:id="@+id/uploadPhoto"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/photoPreview"
        android:layout_below="@+id/openPhoto"
        android:layout_marginTop="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="180dp"
        android:adjustViewBounds="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openPhotoButton"
        android:id="@+id/openPhoto"
        android:layout_alignBaseline="@+id/takePhoto"
        android:layout_alignBottom="@+id/takePhoto"
        android:layout_toRightOf="@+id/uploadPhoto"
        android:layout_toEndOf="@+id/uploadPhoto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoButton"
        android:id="@+id/takePhoto"
        android:layout_marginTop="86dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/uploadPhoto"
        android:layout_toStartOf="@+id/uploadPhoto" />

</RelativeLayout>